Allow xacml-pdp to use kafka
Issue-ID: POLICY-4202
Change-Id: Idaff733d93cbfcb9a32731eb3b811e423942f834
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>