@@ -1,7 +1,7 @@
 /*-
  * ============LICENSE_START=======================================================
  * Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
- * Modifications Copyright (C) 2021 Nordix Foundation.
+ * Modifications Copyright (C) 2021, 2023 Nordix Foundation.
  * ================================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@
 
 package org.onap.policy.tutorial.tutorial;
 
-import java.util.Arrays;
 import java.util.List;
 import org.onap.policy.models.tosca.authorative.concepts.ToscaConceptIdentifier;
 import org.onap.policy.pdp.xacml.application.common.ToscaPolicyTranslator;
@@ -38,12 +37,12 @@ public class TutorialApplication extends StdXacmlApplicationServiceProvider {
 
     @Override
     public List<String> actionDecisionsSupported() {
-        return Arrays.asList("authorize");
+        return List.of("authorize");
     }
 
     @Override
     public synchronized List<ToscaConceptIdentifier> supportedPolicyTypes() {
-        return Arrays.asList(supportedPolicyType);
+        return List.of(supportedPolicyType);
     }
 
     @Override
